Fix #112073: Add all group outputs first, followed by all inputs

This keeps initial node groups using conventional outputs..inputs
layout.

Pull Request: https://projects.blender.org/blender/blender/pulls/112076